--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-intl": "^4.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "resend": "^6.7.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
