--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "Topdeck Montreal - Professional Deck Staining & Exterior Painting",
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.24.12",
     "next": "^14.2.35",
