--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "framer-motion": "^12.24.12",
     "next": "^14.2.35",
     "next-intl": "^4.7.0",
@@ -32,5 +33,10 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "not dead"
+  ]
 }
