--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/speed-insights": "^1.3.1",
     "@vis.gl/react-google-maps": "^1.7.1",
     "ai": "^6.0.73",
+    "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
     "framer-motion": "^12.24.12",
