--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/google": "^3.0.21",
     "@ai-sdk/react": "^3.0.75",
+    "@next/third-parties": "^16.1.6",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/postcss": "^4.1.18",
@@ -22,7 +23,7 @@
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
     "framer-motion": "^12.24.12",
-    "next": "^14.2.35",
+    "next": "^15.5.10",
     "next-intl": "^4.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
